--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.1
 dj-database-url==0.5.0
 Django==3.1.3
+django-ckeditor==6.0.0
 gunicorn==20.1.0
 psycopg2==2.8.6
 python-dotenv==0.15.0
